Safari365 Prod/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Celebrating_Birthday__c</fullName>
        <label>Celebrating Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Celebrating_a_wedding_anniversary__c</fullName>
        <label>Celebrating a wedding anniversary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competition_Basket_Information__c</fullName>
        <label>Competition Basket Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competition_Name__c</fullName>
        <label>Competition Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competition_Shared_on_FB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competition Shared on FB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_of_Residence__c</fullName>
        <label>Country of Residence (Master)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Of_Residence_client</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_Sub_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Sub Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Status__c</fullName>
        <label>Credit Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Industry,&quot;&quot;),&quot;Industry, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(BillingCity) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Type,&quot;&quot;), &quot;Type&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Industry,&quot;&quot;), 0,20) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,20) + IF( LEN(BillingCity) = 0, 0,20) + IF(LEN(Phone) = 0, 0,20) + IF( ISPICKVAL(Type,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Notes__c</fullName>
        <label>Delivery Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DietaryRequirements_Text__c</fullName>
        <label>DietaryRequirements Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DietaryRequirements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DietaryRequirements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Number__c</fullName>
        <label>Emergency Contact Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Person__c</fullName>
        <label>Emergency Contact Person</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_First_Name__c</fullName>
        <label>Emergency First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Last_Name__c</fullName>
        <label>Emergency Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Mobile_Phone_Number__c</fullName>
        <label>Emergency Mobile Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ExistingMobilityIssue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ExistingMobilityIssue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Medical_Condition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Medical Condition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please check this box if you need to be reminded to follow up with this Account.</description>
        <inlineHelpText>Please check this box if you need to be reminded to follow up with this Account.</inlineHelpText>
        <label>Follow Up Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GoogleAccFolderId__c</fullName>
        <label>GoogleAccFolderId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Folder_Id__c</fullName>
        <label>Google Folder Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiate_Forget_Id_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initiate Forget Id Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Condition__c</fullName>
        <label>Medical Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Conditions__c</fullName>
        <label>Medical Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Information_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical Information Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Members_Club_ID__c</fullName>
        <label>Members Club ID</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name_s__c</fullName>
        <label>Middle Name s</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobility_Issues__c</fullName>
        <label>Mobility Issues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscribe me to newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Passengers</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Occasion__c</fullName>
        <label>Other Occasion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PassengerAgeWhenTravelling__c</fullName>
        <formula>FLOOR((TODAY() - Date_Of_Birth__c) /365.2425)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PassengerAgeWhenTravelling</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passport_Expiry_Date__c</fullName>
        <label>Passport Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Passport_Information_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passport Information Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passport_Nationality__c</fullName>
        <label>Passport Nationality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passport_Number__c</fullName>
        <label>Passport Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Emergency_Phone_Number__c</fullName>
        <label>Policy Emergency Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Dietary_Requirement__c</fullName>
        <label>Special Dietary Requirement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Origin_c__c</fullName>
        <label>Website Origin</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasWonOpp__c</fullName>
        <label>hasWonOpp</label>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>Country_of_Residence__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Clients</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Country_of_Residence__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>All of My Clients</label>
    </listViews>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Business Account</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>